<resources>
    <string name="app_name">IR Quiz MCQ SQLite</string>
    <string name="ravinathsaraswat_gmail_com">ravinathsaraswat@gmail.com</string>
    <string name="ravindra_nath_saraswat">Ravindra Nath Saraswat</string>
    <string name="slash">\" / \"</string>
    <string name="indian_railway_quiz_app">Indian Railway Quiz App</string>
    <string name="start">Start</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="about_us">About Us</string>
    <string name="railwaylogo">railwaylogo</string>
    <string name="no">False</string>
    <string name="_0">0</string>
    <string name="yes">True</string>
    <string name="your_score">Your Score</string>
    <string name="quit">Quit</string>
    <string name="next_question">Next Question</string>
    <string name="question">Question</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="developers">Developers</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="_00_30">00:30</string>
    <string name="here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text">Here will be the question text\nHere will be the question text\nHere will be the question text</string>
    <string name="option_1">Option A</string>
    <string name="option_2">Option B</string>
    <string name="option_3">Option C</string>
    <string name="option_4">Option D</string>
    <string name="confirm">Confirm</string>
    <string name="category">Category:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="add_question">Add Question</string>
    <string name="add_category">Add Category</string>
    <string name="question_id">Question ID</string>
    <string name="b">B</string>
    <string name="answer">Answer</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="d">D</string>
</resources>