<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/score_0"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_view_question"
        app:layout_constraintEnd_toStartOf="@+id/text_view_countdown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_view_question_count"
        app:layout_constraintTop_toBottomOf="@+id/text_view_question_count" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:layout_marginTop="4dp"
        android:text="@string/question_1_x"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_view_score"
        app:layout_constraintEnd_toStartOf="@+id/text_view_countdown"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_category" />

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:freezesText="true"
        android:text="@string/category"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_view_question_count"
        app:layout_constraintEnd_toStartOf="@+id/text_view_difficulty"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_category"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:freezesText="true"
        android:text="@string/difficulty"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_view_countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_category"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/_00_30"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_question_count"
        app:layout_constraintTop_toBottomOf="@+id/text_view_difficulty" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="414dp"
        android:layout_height="106dp"
        android:layout_above="@id/radio_group"
        android:text="@string/here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_score" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="382dp"
        android:layout_height="179dp"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toTopOf="@+id/button_confirm_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_question">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_4" />
    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>